# Criterion

./: .gitignore  BUILD.bazel  WORKSPACE  defs.bzl
.github/workflows/: ci.yml
src/: BUILD.bazel  mutex.h
